--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
 }
 
 </style>
-    <script type="module">
-      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-      mermaid.initialize({ startOnLoad: true });
-    </script>
             
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Microsoft/vscode/extensions/markdown-language-features/media/markdown.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Microsoft/vscode/extensions/markdown-language-features/media/highlight.css">
@@ -150,7 +146,7 @@
 </ul>
 <h2 id="assignments">Assignments</h2>
 <ol>
-<li>Traffic Light</li>
+<li><a href="01-traffic-light.html">Traffic Light</a></li>
 </ol>
 
             
