Add missing container div and remove minify dependency

--- a/01-traffic-light.html
+++ b/01-traffic-light.html
@@ -8,9 +8,14 @@
           <link rel="stylesheet" href="styles.css"> 
       </head>
       <body>
+        <div class="container">
           <p><a href="index.html">Index</a></p>
 <h1>Assignment 1: Traffic Lights</h1>
+<ul>
+<li><a href="./source-files/01_traffic_light/01_traffic_light.ino">Sketch file</a></li>
+</ul>
 
+        </div>
       </body>
       </html>
     
