--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>index</title><link rel="stylesheet" href="styles.css"></head><body><h1>flo truong</h1><h2>UW HCDE 539 - Physical computing</h2><ul><li>2024 Fall</li><li>Professor: Adi Azulay</li></ul><h2>Assignments</h2><ol><li><a href="01-traffic-light.html">Traffic Light</a></li></ol></body></html>h2>Assignments<ol><li><a href="01-traffic-light.html">Traffic Light</a></li></ol>i>
+
+      <!DOCTYPE html>
+      <html lang="en">
+      <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>index</title>
+          <link rel="stylesheet" href="styles.css"> 
+      </head>
+      <body>
+        <div class="container">
+          <h1>flo truong</h1>
+<h2>UW HCDE 539 - Physical computing</h2>
+<ul>
+<li>2024 Fall</li>
+<li>Professor: Adi Azulay</li>
+</ul>
+<h2>Assignments</h2>
+<ol>
+<li><a href="01-traffic-light.html">Traffic Light</a></li>
 </ol>
 
+        </div>
       </body>
       </html>
     
