Add content to first assignment

--- a/01-traffic-light.html
+++ b/01-traffic-light.html
@@ -10,10 +10,11 @@
       <body>
         <div class="container">
           <p><a href="index.html">Index</a></p>
-<h1>Assignment 1: Traffic Lights</h1>
+<h1>1: Traffic Lights</h1>
 <ul>
 <li><a href="./source-files/01_traffic_light/01_traffic_light.ino">Sketch file</a></li>
 </ul>
+<p><img src="./assets/01-00001.jpg" alt="Top down view of breadboard and Arduino"></p>
 
         </div>
       </body>
