Add code styling to md

--- a/01-traffic-light.html
+++ b/01-traffic-light.html
@@ -6,6 +6,8 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>01-traffic-light</title>
           <link rel="stylesheet" href="styles.css"> 
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css" />
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script>
       </head>
       <body>
         <div class="container">
@@ -39,7 +41,7 @@
 <img src="./source-files/01_traffic_light/01-circuit-view.png" alt=""></p>
 </blockquote>
 <h2>Code</h2>
-<pre><code class="language-Processing">const int ledRed = 12;
+<pre><code class="language-JS">const int ledRed = 12;
 const int ledYellow = 11;
 const int ledGreen = 10;
 
