--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>index</title>
           <link rel="stylesheet" href="styles.css"> 
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css" />
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script>
       </head>
       <body>
         <div class="container">
