Add in output to Serial monitor

--- a/01-traffic-light.html
+++ b/01-traffic-light.html
@@ -47,6 +47,9 @@ const int ledGreen = 10;
 
 // the setup function runs once when you press reset or power the board
 void setup() {
+  // setup debugging
+  Serial.begin(9600);
+
   // initialize digital led pins as an output.
   pinMode(ledRed, OUTPUT);
   pinMode(ledYellow, OUTPUT);
@@ -57,16 +60,19 @@ void setup() {
 void loop() {
   // turn green light on for 4 secs, then turn off
   digitalWrite(ledGreen, HIGH);
+  Serial.println(&quot;Green&quot;);
   delay(4000);
   digitalWrite(ledGreen, LOW);
 
   // turn green light on for 4 secs, then turn off
   digitalWrite(ledYellow, HIGH);
+  Serial.println(&quot;Yellow&quot;);
   delay(4000);     
   digitalWrite(ledYellow, LOW);
 
   // turn green light on for 4 secs, then turn off
   digitalWrite(ledRed, HIGH);
+  Serial.println(&quot;Red&quot;);
   delay(4000);
   digitalWrite(ledRed, LOW);
 }
