--- a/readme.html
+++ b/readme.html
@@ -1,9 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>readme</title><link rel="stylesheet" href="styles.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script></head><body><div class="container"><h1>Read me</h1><h2>Installation</h2><ul><li>Use npm package manager</li><li>Install packages listed in package.json</li><li>Running the build will 1) convert markdown files to HTML and 2) convert HEIC files to jpgs<ul><li>Run in terminal (in the project folder) <code>node index.js</code></li></ul></li><li>The convertMD file is where we are inserting stylesheet references</li></ul><h2>License</h2><p><a href="https://choosealicense.com/licenses/mit/">MIT</a></p></div></body></html>ing stylesheet references</li>
-</ul>
-<h2>License</h2>
-<p><a href="https://choosealicense.com/licenses/mit/">MIT</a></p>
-
-        </div>
-      </body>
-      </html>
-    
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>readme</title><link rel="stylesheet" href="styles.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script></head><body><div class="container"><h1>Read me</h1><h2>Installation</h2><ul><li>Use npm package manager</li><li>Install packages listed in package.json</li><li>Running the build will 1) convert markdown files to HTML and 2) convert HEIC files to jpgs<ul><li>Run in terminal (in the project folder) <code>node index.js</code></li></ul></li><li>The convertMD file is where we are inserting stylesheet references</li></ul><h2>License</h2><p><a href="https://choosealicense.com/licenses/mit/">MIT</a></p></div></body></html>
