--- a/04-lcd.html
+++ b/04-lcd.html
@@ -27,7 +27,7 @@ void loop() {
   for (int i = 0; i &lt; countEllipsis; i++) {
     lcd.print(&quot;.&quot;);
   }
-  // Add to our tracker and set a conditional that, once met, will reset our tracke
+  // Add to our tracker and set a conditional that, once met, will reset our tracker
   countEllipsis++;
   if (countEllipsis &gt; 3) {
     countEllipsis = 0;
@@ -37,4 +37,16 @@ void loop() {
   // Add a pause between each ellipsis
   delay(500);
 }
+</code></pre><h3>Serial monitor output sample</h3><pre><code class="language-JS">0
+1
+2
+3
+0
+1
+2
+3
+0
+1
+2
+3
 </code></pre><h3>Process &amp; Learnings</h3><ul><li><a href="https://docs.arduino.cc/libraries/liquidcrystal/">LiquidCrystal functions documentation</a></li><li>At first I couldn&#39;t figure out why the first ellipsis wasn&#39;t getting cleared. Turns out you need to clear and reposition the cursor each time (<a href="https://forum.arduino.cc/t/clearing-characters-in-lcd-print/379481/4">Arduino forums</a>).</li></ul></div></body></html>
