--- a/05-functions.html
+++ b/05-functions.html
@@ -1,24 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>05-functions</title><link rel="stylesheet" href="styles.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script></head><body><div class="container"><p><a href="index.html">Index</a></p><h1>Functions</h1><p>DO NOT USE ChatGPT or any other AI to write code for this assignment .</p><p>For this assignment you will write two (2) functions:</p><p>Function 1. Takes a pin number as an argument and return a sensor reading as an Int mapped from 1-100</p><p>Function 2. Takes an Int and uses it to fade or blinks an LED</p><h2>Assignment description</h2><h3>Source files</h3><ul><li><a href="https://www.tinkercad.com/things/iF6CzltskmB/editel?returnTo=%2Fdashboard%2Fdesigns%2Fcircuits&sharecode=g0FQ-bh2h9p4Jq9OYQSrg4UjInJ-FF7-mQ9ecc69fnw">TinkerCAD source</a></li></ul><h3>Documentation</h3><blockquote><p>Top down view of breadboard and Arduino</p></blockquote><p><img src="./assets/05-00001.webp" alt=""></p><blockquote><p>Circuit view</p></blockquote><p><img src="./assets/05-00002.webp" alt=""></p><blockquote><p>Schematic drawing</p></blockquote><p><img src="./assets/05-00003.webp" alt=""></p><blockquote><p>Trying to figure out how the timing was going to work</p></blockquote><p><img src="./assets/05-00004.webp" alt=""></p><h3>Code</h3><pre><code class="language-JS">// Outputs
-const int LED_GREEN = 12;
-const int LED_YELLOW = 8; 
-
-// Inputs
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>05-functions</title><link rel="stylesheet" href="styles.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/themes/prism.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script></head><body><div class="container"><p><a href="index.html">Index</a></p><h1>Functions</h1><h2>Assignment description</h2><p>DO NOT USE ChatGPT or any other AI to write code for this assignment .</p><p>For this assignment you will write two (2) functions:</p><p>Function 1. Takes a pin number as an argument and return a sensor reading as an Int mapped from 1-100</p><p>Function 2. Takes an Int and uses it to fade or blinks an LED</p><h2>Function 1</h2><h3>Source files: Function 1</h3><ul><li><a href="https://www.tinkercad.com/things/iF6CzltskmB-05-functions">TinkerCAD source</a></li></ul><h3>Documentation: Function 1</h3><blockquote><p>Top down view of breadboard and Arduino</p></blockquote><p><img src="./assets/05-00001.webp" alt=""></p><blockquote><p>Circuit view</p></blockquote><p><img src="./assets/05-00002.webp" alt=""></p><blockquote><p>Schematic drawing</p></blockquote><p><img src="./assets/05-00003.webp" alt=""></p><h3>Code: Function 1</h3><pre><code class="language-JS">// Inputs
 const int SENSOR_LIGHT = A0;
-const int SENSOR_TEMP = A1;
 const int SENSOR_POT = A4;
 
 // Run
 void setup() {
   Serial.begin(9600);
-  pinMode(LED_GREEN, OUTPUT);
-  pinMode(LED_YELLOW, OUTPUT);
-}
+ }
 
 void loop() {
   sensor(SENSOR_LIGHT);
   sensor(SENSOR_POT);  
-  blinker(LED_GREEN, 2000, 1000);
-  blinker(LED_YELLOW, 500, 500);
 }
 
 // === Functions ===
@@ -32,6 +23,21 @@ int sensor(int _sensor) {
   sensorRaw = analogRead(_sensor);
   sensorMapped = sensorRaw/10.23;
   return sensor;
+}
+</code></pre><h2>Function 2</h2><h3>Source files: Function 2</h3><ul><li><a href="https://www.tinkercad.com/things/i4ivWuVKgQU-05-functions-2">TinkerCAD source</a></li></ul><h3>Documentation: Function 2</h3><blockquote><p>Top down view of breadboard and Arduino</p></blockquote><p><img src="./assets/05-00004.webp" alt=""></p><blockquote><p>Circuit view</p></blockquote><p><img src="./assets/05-00005.webp" alt=""></p><blockquote><p>Schematic drawing</p></blockquote><p><img src="./assets/05-00006.webp" alt=""></p><blockquote><p>Trying to figure out how the timing was going to work</p></blockquote><p><img src="./assets/05-00007.webp" alt=""></p><h3>Code: Function 2</h3><pre><code class="language-JS">// Outputs
+const int LED_GREEN = 12;
+const int LED_YELLOW = 8; 
+
+// Run
+void setup() {
+  Serial.begin(9600);
+  pinMode(LED_GREEN, OUTPUT);
+  pinMode(LED_YELLOW, OUTPUT);
+}
+
+void loop() { 
+  blinker(LED_GREEN, 2000, 1000);
+  blinker(LED_YELLOW, 500, 500);
 }
 
 // Function 2. Takes an Int and uses it to fade or blink an LED
@@ -58,4 +64,4 @@ void blinker(int _led, int _onTime, int _offTime) {
     digitalWrite(_led, HIGH);
   }
 }
-</code></pre><h3>Process &amp; Learnings</h3><ul><li>Blinker<ul><li>To get a sense for what should happen when, I built a spreadsheet. I found this much easier to track and quicker to iterate than looking at the Serial output.</li><li>The code for the blinker works for one LED but I couldn&#39;t reconcile both LEDs working at the same time. When I extracted the code back into the loop, duplicated one for each LED, and assigned a unique global timer variable, then the LEDs blinked correctly.</li></ul></li></ul></div></body></html>
+</code></pre><h3>Process &amp; Learnings</h3><ul><li>Blinker<ul><li>To get a sense for what should happen when, I built a spreadsheet. I found this much easier to track and quicker to iterate the initial draft than it was to look at the Serial output.</li><li>The code for the blinker works for one LED but I couldn&#39;t reconcile both LEDs working at the same time. When I extracted the code back into the loop, duplicated one for each LED, and assigned a unique global timer variable, then the LEDs blinked correctly.</li></ul></li><li>New programming terms<ul><li>When it comes to capturing time, the count can climb quickly. Using both long (for long storage) and unsigned (to keep the number in the positive) prevented the build from breaking.</li><li><a href="https://docs.arduino.cc/language-reference/en/variables/data-types/unsignedInt/">unsigned int</a></li><li><a href="https://docs.arduino.cc/language-reference/en/variables/data-types/long/">long</a></li><li><a href="https://docs.arduino.cc/language-reference/en/variables/variable-scope-and-qualifiers/static/">static</a></li></ul></li></ul></div></body></html>
